--- a/index.html
+++ b/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="stylesheet" href="style.css" />
   <title>Frontend Mentor | Single Price Grid Component</title>
-
 </head>
+
 <body>
-  Join our community
+  <div class="container">
+    <div class="block-1">
+      <h1>Join our community</h1>
+      <p class="green-txt"> 30-day, hassle-free money back guarantee</p>
+      <p class="grey-txt">Gain access to our full
+        library of tutorials along with expert code reviews. Perfect for any
+        developers who are serious about honing their skills.</p>
+      </p>
+    </div>
+    <div class="block-2">
+      <h1>Monthly Subscription</h1>
+      <div class="pricing">
+        <p id="price">&dollar;29</p>
+        <div class="term">
+          <p>per month</p>
+        </div>
+      </div>
 
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+      <p>Full access for less than
+        &dollar;1 a day </p>
+      <button class="sign-up-btn">Sign Up</button>
+    </div>
+    <div class="block-3">
+      <h1>Why Us</h1>
+      <p id="why-us">Tutorials by industry experts <br> Peer &amp; expert code review <br> Coding
+        exercises <br> Access to our GitHub repos <br> Community forum <br> Flashcard decks <br> New
+        videos every week</p>
+    </div>
+  </div>
 </body>
+
 </html>
