--- a/index.html
+++ b/index.html
@@ -10,35 +10,37 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="block-1">
-      <h1>Join our community</h1>
-      <p class="green-txt"> 30-day, hassle-free money back guarantee</p>
-      <p class="grey-txt">Gain access to our full
-        library of tutorials along with expert code reviews. Perfect for any
-        developers who are serious about honing their skills.</p>
-      </p>
-    </div>
-    <div class="block-2">
-      <h1>Monthly Subscription</h1>
-      <div class="pricing">
-        <p id="price">&dollar;29</p>
-        <div class="term">
-          <p>per month</p>
-        </div>
+  <main>
+    <div class="container">
+      <div class="block-1">
+        <h1>Join our community</h1>
+        <p class="green-txt"> 30-day, hassle-free money back guarantee</p>
+        <p class="grey-txt">Gain access to our full
+          library of tutorials along with expert code reviews. Perfect for any
+          developers who are serious about honing their skills.</p>
+        </p>
       </div>
+      <div class="block-2">
+        <h1>Monthly Subscription</h1>
+        <div class="pricing">
+          <p id="price">&dollar;29</p>
+          <div class="term">
+            <p>per month</p>
+          </div>
+        </div>
 
-      <p>Full access for less than
-        &dollar;1 a day </p>
-      <button class="sign-up-btn">Sign Up</button>
+        <p>Full access for less than
+          &dollar;1 a day </p>
+        <button class="sign-up-btn">Sign Up</button>
+      </div>
+      <div class="block-3">
+        <h1>Why Us</h1>
+        <p id="why-us">Tutorials by industry experts <br> Peer &amp; expert code review <br> Coding
+          exercises <br> Access to our GitHub repos <br> Community forum <br> Flashcard decks <br> New
+          videos every week</p>
+      </div>
     </div>
-    <div class="block-3">
-      <h1>Why Us</h1>
-      <p id="why-us">Tutorials by industry experts <br> Peer &amp; expert code review <br> Coding
-        exercises <br> Access to our GitHub repos <br> Community forum <br> Flashcard decks <br> New
-        videos every week</p>
-    </div>
-  </div>
+  </main>
 </body>
 
 </html>
